# BasisRust

./: .gitignore  Cargo.toml  Config.xml  README.md  docker-compose-headless.yml  docker-compose-server.yml
.a5c/cache/compression/: 300c5110b16c2f54.json
.claude/: settings.local.json
BasisRustClient/: Cargo.toml  README.md
BasisRustClient/src/: main.rs
BasisRustServer/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose-headless.local-capture.yml
BasisRustServer/crates/basis-protocol/: Cargo.toml
BasisRustServer/crates/basis-protocol/src/: avatar.rs  io.rs  permissions.rs  server_info.rs
BasisRustServer/crates/basis-server-admin/: Cargo.toml
BasisRustServer/crates/basis-server-console/: Cargo.toml
BasisRustServer/crates/basis-server-console/src/: main.rs
BasisRustServer/crates/basis-server-core/src/: avatar_sync.rs  lib.rs  p2p.rs
BasisRustServer/crates/basis-server-health/src/: lib.rs
BasisRustServer/crates/basis-server-permissions/src/: lib.rs
BasisRustServer/crates/basis-server-resources/: Cargo.toml
BasisRustServer/crates/basis-server-resources/src/: lib.rs
BasisRustServer/crates/basis-server-storage/src/: lib.rs
BasisRustServer/crates/basis-transport/src/: lib.rs
BasisRustServer/tools/: capture-dumpcap.ps1
BasisRustServer/tools/basis-source-sync/src/: main.rs
crates/basis-protocol/src/: avatar.rs  channels.rs  config.rs  did.rs  lib.rs  messages.rs  server_info.rs  version.rs
crates/basis-server-admin/: Cargo.toml
crates/basis-server-admin/src/: lib.rs
crates/basis-server-console/: Cargo.toml
crates/basis-server-console/src/: main.rs
crates/basis-server-core/: Cargo.toml
crates/basis-server-core/src/: avatar_sync.rs  lib.rs
crates/basis-server-health/: Cargo.toml
crates/basis-server-permissions/: Cargo.toml
crates/basis-server-storage/: Cargo.toml
crates/basis-transport/: Cargo.toml
crates/basis-transport/src/: lib.rs
src/: main.rs
tools/: capture-pktmon.ps1
tools/basis-source-sync/: Cargo.toml
tools/basis-source-sync/src/: main.rs
