[workspace]
resolver = "2"
members = [
    "crates/basis-protocol",
    "crates/basis-transport",
    "crates/basis-server-core",
    "crates/basis-server-console",
    "crates/basis-server-health",
    "crates/basis-server-storage",
    "crates/basis-server-permissions",
    "crates/basis-server-admin",
    "crates/basis-server-resources",
    "tools/basis-source-sync",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dashmap = "6"
ed25519-dalek = "2"
flate2 = "1"
lz4_flex = "0.11"
parking_lot = "0.12"
quick-xml = { version = "0.38", features = ["serialize"] }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
walkdir = "2"
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
