[package]
name = "basis-server-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
basis-protocol = { path = "../basis-protocol" }
basis-server-admin = { path = "../basis-server-admin" }
basis-server-permissions = { path = "../basis-server-permissions" }
basis-server-resources = { path = "../basis-server-resources" }
basis-server-storage = { path = "../basis-server-storage" }
basis-transport = { path = "../basis-transport" }
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rayon.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
windows-sys.workspace = true
