[package]
name = "basis-server-health"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
basis-protocol = { path = "../basis-protocol" }
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
