[package]
name = "basis-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
basis-protocol = { path = "../basis-protocol" }
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
