[package]
name = "basis-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
flate2.workspace = true
lz4_flex.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
rand.workspace = true
